Fixed top nav so full nav available on smaller screen

--- a/css/basic.css
+++ b/css/basic.css
@@ -11,10 +11,6 @@ body {
  font-family:Helvetica,Arial,Tahoma,sans-serif;
  padding:0 0.5em;
 }
-nav {
- background-image:linear-gradient(to bottom,#253f7f 0,#0e399b 50%,#01288a 50%,#015df1 100%);
- height: 68px;
-}
 article {
  margin:0;
  padding:0;
@@ -107,6 +103,15 @@ img {
 
 /* navigation */
 
+nav {
+ background-image:linear-gradient(to bottom,#253f7f 0,#0e399b 50%,#01288a 50%,#015df1 100%);
+ -webkit-border-bottom-right-radius: 10px;
+ -webkit-border-bottom-left-radius: 10px;
+ -moz-border-radius-bottomright: 10px;
+ -moz-border-radius-bottomleft: 10px;
+ border-bottom-right-radius: 10px;
+ border-bottom-left-radius: 10px;
+}
 nav a.logo {
  display:block;
  float:right;
@@ -115,30 +120,32 @@ nav a.logo {
 nav a.logo img {
  border: none;
 }
+@media screen and (max-width: 480px){
+ nav a.logo {
+  display:none;
+ }
+}
 nav ul {
  list-style: none;
  padding:0;
- margin:0em 0em 0em 1em;
- height: 100%;
+ margin:0 0 0 1em;
 }
 nav li {
  display: inline-block;
  padding:0; margin:0;
- margin-right:1em;
- height: 100%;
 }
 nav a {
  display:block;
- padding:1em 0.5em 0.5em 0.5em;
+ padding:0 1em 0 1em;
  text-decoration: none;
  color: white;
- height: 100%;
+ line-height:68px;
 }
 nav li:hover {
  background-image: linear-gradient(to bottom,#152f3f 0,#0e196b 50%,#01084a 50%,#011d71 100%);
 }
 nav a.current {
- font-weight: bold;
+ text-decoration:underline;
 }
 
 /* Copied from https://gist.github.com/demisx/025698a7b5e314a7a4b5 */
